# maturin-action

./: .eslintrc.json  .gitignore  LICENSE  README.md  action.yml  eslint.config.mjs  generate-version-manifest.py  generate-versions-manifest.py  index.js  index.ts  package-lock.json  package.json  tsconfig.json  version-manifest.json  versions-manifest.json
.github/workflows/: test.yml  update.yml  zizmor.yml
actions/maturin-action/: action.yml
src/: exec.ts  index.ts
tests/pyo3-pure/: Cargo.toml
tests/pyo3-pure/src/: lib.rs  python.rs
