[package]
authors = ["konstin <konstin@mailbox.org>"]
name = "pyo3-pure"
version = "2.1.2"
edition = "2018"
description = "Implements a dummy function (get_fortytwo.DummyClass.get_42()) in rust"

[dependencies]
pyo3 = { version = "0.14.1", features = ["abi3-py36", "extension-module"], optional = true }

[lib]
name = "pyo3_pure"
crate-type = ["cdylib"]

[features]
python = ["pyo3"]
